--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-cocuou
+<html>
+	<head>
+		<title>3Deleuze</title>
+		<style>canvas { width: 100%; height: 100% }</style>
+	</head>
+	<body>
+		<script src="js/three.min.js"></script>
+		<script>
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+
+			var renderer = new THREE.WebGLRenderer();
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+
+			var mouseX = 0, mouseY = 0;
+
+			var windowHalfX = window.innerWidth / 2;
+			var windowHalfY = window.innerHeight / 2;
+						
+			var geometry = new THREE.CubeGeometry(1,1,1);
+			var material = new THREE.MeshBasicMaterial({color: 'red'});
+			var cube = new THREE.Mesh(geometry, material);
+			scene.add(cube);
+
+			camera.position.z = 50;
+			document.addEventListener( 'mousemove', onDocumentMouseMove, false );				
+
+
+			var manager = new THREE.LoadingManager();
+			manager.onProgress = function ( item, loaded, total ) {
+
+				console.log( item, loaded, total );
+
+			};
+			var texture = new THREE.Texture();
+
+			var loader = new THREE.ImageLoader( manager );
+			loader.load( 'textures/ash_uvgrid01.jpg', function ( image ) {
+
+				texture.image = image;
+				texture.needsUpdate = true;
+
+			} );
+
+			// model
+
+			var loader = new THREE.OBJLoader( manager );
+			loader.load( 'obj/tree/tree.obj', function ( object ) {
+
+				object.traverse( function ( child ) {
+
+					if ( child instanceof THREE.Mesh ) {
+
+						child.material.map = texture;
+
+					}
+
+				} );
+
+				object.position.y = - 80;
+				scene.add( object );
+
+			} );
+			
+			var render = function () {
+				requestAnimationFrame(render);
+
+				//cube.rotation.x += 0.1;
+				//cube.rotation.y += 0.1;
+
+				renderer.render(scene, camera);
+
+				camera.position.x += ( mouseX - camera.position.x ) * .05;
+				camera.position.y += ( - mouseY - camera.position.y ) * .05;
+			};
+
+			function onDocumentMouseMove( event ) {
+				mouseX = ( event.clientX - windowHalfX ) / 2;
+				mouseY = ( event.clientY - windowHalfY ) / 2;
+			}			
+			render();
+		</script>
+	</body>
+</html>
