--- a/frames.html
+++ b/frames.html
@@ -4,145 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Semantics Frames</title>
-		<style>
-			html, body {
-				height: 100%;
-			}
-
-			body {
-				background-color: #000000;
-				margin: 0;
-				font-family: Helvetica, sans-serif;
-				overflow: hidden;
-			}
-
-			a {
-				color: #ffffff;
-			}
-
-			#info {
-				position: absolute;
-				width: 100%;
-				color: #ffffff;
-				padding: 5px;
-				font-family: Monospace;
-				font-size: 13px;
-				font-weight: bold;
-				text-align: center;
-				z-index: 1;
-			}
-
-			#menu {
-				position: absolute;
-				bottom: 20px;
-				width: 100%;
-				text-align: center;
-			}
-
-			.element {
-				width: 300px;
-				height: 300px;
-				box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
-				border: 1px solid rgba(127,255,255,0.25);
-				text-align: center;
-				cursor: default;
-			}
-
-			.element:hover {
-				box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
-				border: 1px solid rgba(127,255,255,0.75);
-			}
-
-				.element .number {
-					position: absolute;
-					top: 20px;
-					right: 20px;
-					font-size: 12px;
-					color: rgba(127,255,255,0.75);
-				}
-
-				.element .symbol {
-					position: absolute;
-					top: 40px;
-					left: 0px;
-					right: 0px;
-					font-size: 60px;
-					font-weight: bold;
-					color: rgba(255,255,255,0.75);
-					text-shadow: 0 0 10px rgba(0,255,255,0.95);
-				}
-
-				.element .details {
-					position: absolute;
-					bottom: 15px;
-					left: 0px;
-					right: 0px;
-					font-size: 12px;
-					color: rgba(127,255,255,0.75);
-				}
-
-			button {
-				color: rgba(127,255,255,0.75);
-				background: transparent;
-				outline: 1px solid rgba(127,255,255,0.75);
-				border: 0px;
-				padding: 5px 10px;
-				cursor: pointer;
-			}
-			button:hover {
-				background-color: rgba(0,255,255,0.5);
-			}
-			button:active {
-				color: #000000;
-				background-color: rgba(0,255,255,0.75);
-			}
-			
-			#search {
-				position: absolute;
-				width: 100%;
-				color: rgba(127,255,255,0.75);
-				padding: 20px;
-				text-align: center;
-			}
-
-			#search input {
-				box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
-				border: 1px solid rgba(127,255,255,0.25);
-				color: rgba(127,255,255,0.75);
-				outline: 1px solid rgba(127,255,255,0.75);
-				background-color: transparent;
-				border: 1px solid rgba(127,255,255,0.75);
-				padding: 10px;
-				font-size: 20px;
-				text-transform: uppercase;
-				-webkit-border-radius: 0px; /* workaround for ios safari */
-			}
-
-			#search button {
-				color: rgba(127,255,255,0.75);
-				background-color: transparent;
-				border: 1px solid rgba(127,255,255,0.75);
-				padding: 10px;
-				font-size: 20px;
-				text-transform: uppercase;
-				cursor: pointer;
-			}
-			
-			.blockMovie {
-	
-				width: 300px;
-				margin: 20px;
-
-				border-radius: 2px;	
-				
-				border-right:2px solid #007375;
-				border-bottom:2px solid #007375;
-			}
-
-			.blockMovie>img	{
-				width: 100%;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<script src="js/jquery-1.9.1.js"></script>
@@ -166,7 +28,7 @@
 
 			function init() {
 
-				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10000 );
+				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
 				camera.position.z = 3000;
 
 				scene = new THREE.Scene();
@@ -235,18 +97,18 @@
 						var d = data[i];
 						if(idRub!=d.id_rubrique){
 							idRub=d.id_rubrique;
-							nbArt ++;
 							nbArt=0;
 							//on ajoute l'objet correspondant à la rubrique
 							var object = {titre:d.rubTitre, score:nbArt, niv:30, id:d.id_rubrique};
 							data3D.push(object);
 						}
+						nbArt ++;
 						//on ajoute l'objet correspondant à l'article
 						var object = {titre:d.titre, score:d.score, niv:31, id:d.id_article};
 						data3D.push(object);
 						//on ajoute l'objet correspondant à la citation
 						d.phrases.forEach(function(p) {
-							var object = {titre:p.deb+p.mot+p.fin, niv:32, id:d.id_article+d.p};
+							var object = {detail:'«'+p.deb+" "+p.mot+" "+p.fin+'...»', niv:32, id:d.id_article+d.p};
 							data3D.push(object);					
 						});
 					}
@@ -299,24 +161,16 @@
 			
 			function getElementDeleuze(data) {
 				var element = document.createElement( 'div' );
-				element.className = 'element';
-				element.style.backgroundColor = 'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';
+				element.className = 'blockDeleuze';
 
 				if(data.niv==32){
-					var symbol = document.createElement( 'div' );
-					symbol.className = 'symbol';
-					symbol.textContent = data.titre;
-					element.appendChild( symbol );
+					var cite = document.createElement( 'cite' );
+					cite.textContent = data.detail;
+					element.appendChild(cite);
 				}else{
-					var symbol = document.createElement( 'div' );
-					symbol.className = 'symbol';
-					symbol.textContent = data.score;
-					element.appendChild( symbol );
-
-					var details = document.createElement( 'div' );
-					details.className = 'details';
-					details.innerHTML = data.titre;
-					element.appendChild( details );
+					var titre = document.createElement( 'h1' );
+					titre.innerHTML = data.titre;
+					element.appendChild(titre);
 				}
 
 				return element;				
@@ -377,9 +231,9 @@
 				objects.push( object );
 
 				var object = new THREE.Object3D();
-				object.position.x = ( ( i % 5 ) * 400 ) - 800;
-				object.position.y = ( - ( Math.floor( i / 5 ) % 5 ) * 400 ) + 800;
-				object.position.z = ( Math.floor( i / 25 ) ) * 1000 - 2000;
+				object.position.x = ( ( i % 10) * 400 ) - 800;
+				object.position.y = ( - ( Math.floor( i / 10) % 10) * 400 ) + 800;
+				object.position.z = ( Math.floor( i / 100) ) * 1000 - 2000;
 				return object;
 			}
 			
